// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CometColor overview 1`] = `
<DocumentFragment>
  <table
    class="css-1ea51ic-TableRowContainer"
  >
    <tbody>
      <tr
        class="css-1kyaur6-BaseCometColor"
      >
        <td
          class="css-7a56uj-BaseCometColor"
        >
          <div
            class="css-15s1hcw-BaseCometColor"
          >
            40
          </div>
        </td>
        <td>
          $comet-color-emerald-40
        </td>
        <td
          class="css-qe1bk5-BaseCometColor"
        >
          <div
            class="css-18qqazo-BaseCometColor"
            style="display: inline-block;"
          >
            #2F9D89
          </div>
        </td>
        <td
          class="css-52t4kn-BaseCometColor"
        >
          <div
            class="css-vls3u9-BaseCometColor"
          >
            <div
              class="css-1ufkypn-BaseCometColor"
            >
              AA
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`CometColor palette 1`] = `
<DocumentFragment>
  <table
    class="css-1w4ok02-CometColorPalette"
  >
    <colgroup>
      <col
        span="1"
      />
      <col
        span="1"
      />
      <col
        span="1"
      />
      <col
        span="1"
      />
    </colgroup>
    <tbody>
      <tr
        class="css-9gjiwz-BaseCometColor"
      >
        <td
          class="css-7a56uj-BaseCometColor"
        >
          <div
            class="css-15s1hcw-BaseCometColor"
          >
            05
          </div>
        </td>
        <td>
          $comet-color-midnight-05
        </td>
        <td
          class="css-qe1bk5-BaseCometColor"
        >
          <div
            class="css-18qqazo-BaseCometColor"
            style="display: inline-block;"
          >
            #020D17
          </div>
        </td>
        <td
          class="css-52t4kn-BaseCometColor"
        >
          <div
            class="css-vls3u9-BaseCometColor"
          >
            <div
              class="css-1ufkypn-BaseCometColor"
            >
              AAA
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="css-7eqm9k-BaseCometColor"
      >
        <td
          class="css-7a56uj-BaseCometColor"
        >
          <div
            class="css-15s1hcw-BaseCometColor"
          >
            10
          </div>
        </td>
        <td>
          $comet-color-midnight-10
        </td>
        <td
          class="css-qe1bk5-BaseCometColor"
        >
          <div
            class="css-18qqazo-BaseCometColor"
            style="display: inline-block;"
          >
            #041B2F
          </div>
        </td>
        <td
          class="css-52t4kn-BaseCometColor"
        >
          <div
            class="css-vls3u9-BaseCometColor"
          >
            <div
              class="css-1ufkypn-BaseCometColor"
            >
              AAA
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="css-frqim2-BaseCometColor"
      >
        <td
          class="css-7a56uj-BaseCometColor"
        >
          <div
            class="css-15s1hcw-BaseCometColor"
          >
            20
          </div>
        </td>
        <td>
          $comet-color-midnight-20
        </td>
        <td
          class="css-qe1bk5-BaseCometColor"
        >
          <div
            class="css-18qqazo-BaseCometColor"
            style="display: inline-block;"
          >
            #08365E
          </div>
        </td>
        <td
          class="css-52t4kn-BaseCometColor"
        >
          <div
            class="css-vls3u9-BaseCometColor"
          >
            <div
              class="css-1ufkypn-BaseCometColor"
            >
              AAA
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="css-12m2xpu-BaseCometColor"
      >
        <td
          class="css-7a56uj-BaseCometColor"
        >
          <div
            class="css-15s1hcw-BaseCometColor"
          >
            30
          </div>
        </td>
        <td>
          $comet-color-midnight-30
        </td>
        <td
          class="css-qe1bk5-BaseCometColor"
        >
          <div
            class="css-18qqazo-BaseCometColor"
            style="display: inline-block;"
          >
            #0C518D
          </div>
        </td>
        <td
          class="css-52t4kn-BaseCometColor"
        >
          <div
            class="css-vls3u9-BaseCometColor"
          >
            <div
              class="css-1ufkypn-BaseCometColor"
            >
              AAA
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="css-1ebnnd6-BaseCometColor"
      >
        <td
          class="css-7a56uj-BaseCometColor"
        >
          <div
            class="css-15s1hcw-BaseCometColor"
          >
            40
          </div>
        </td>
        <td>
          $comet-color-midnight-40
        </td>
        <td
          class="css-qe1bk5-BaseCometColor"
        >
          <div
            class="css-18qqazo-BaseCometColor"
            style="display: inline-block;"
          >
            #106CBC
          </div>
        </td>
        <td
          class="css-52t4kn-BaseCometColor"
        >
          <div
            class="css-vls3u9-BaseCometColor"
          >
            <div
              class="css-1ufkypn-BaseCometColor"
            >
              AA
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="css-1y7e4g7-BaseCometColor"
      >
        <td
          class="css-7a56uj-BaseCometColor"
        >
          <div
            class="css-15s1hcw-BaseCometColor"
          >
            50
          </div>
        </td>
        <td>
          $comet-color-midnight-50
        </td>
        <td
          class="css-qe1bk5-BaseCometColor"
        >
          <div
            class="css-18qqazo-BaseCometColor"
            style="display: inline-block;"
          >
            #1487EB
          </div>
        </td>
        <td
          class="css-52t4kn-BaseCometColor"
        >
          <div
            class="css-vls3u9-BaseCometColor"
          >
            <div
              class="css-1ufkypn-BaseCometColor"
            >
              AA
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="css-gzcehy-BaseCometColor"
      >
        <td
          class="css-7a56uj-BaseCometColor"
        >
          <div
            class="css-15s1hcw-BaseCometColor"
          >
            60
          </div>
        </td>
        <td>
          $comet-color-midnight-60
        </td>
        <td
          class="css-qe1bk5-BaseCometColor"
        >
          <div
            class="css-18qqazo-BaseCometColor"
            style="display: inline-block;"
          >
            #439FEF
          </div>
        </td>
        <td
          class="css-52t4kn-BaseCometColor"
        >
          <div
            class="css-vls3u9-BaseCometColor"
          >
            <div
              class="css-1ufkypn-BaseCometColor"
            >
              AAA
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="css-1lx2u96-BaseCometColor"
      >
        <td
          class="css-7a56uj-BaseCometColor"
        >
          <div
            class="css-15s1hcw-BaseCometColor"
          >
            70
          </div>
        </td>
        <td>
          $comet-color-midnight-70
        </td>
        <td
          class="css-qe1bk5-BaseCometColor"
        >
          <div
            class="css-18qqazo-BaseCometColor"
            style="display: inline-block;"
          >
            #72B7F3
          </div>
        </td>
        <td
          class="css-52t4kn-BaseCometColor"
        >
          <div
            class="css-vls3u9-BaseCometColor"
          >
            <div
              class="css-1ufkypn-BaseCometColor"
            >
              AAA
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="css-1o4fghs-BaseCometColor"
      >
        <td
          class="css-7a56uj-BaseCometColor"
        >
          <div
            class="css-15s1hcw-BaseCometColor"
          >
            80
          </div>
        </td>
        <td>
          $comet-color-midnight-80
        </td>
        <td
          class="css-qe1bk5-BaseCometColor"
        >
          <div
            class="css-18qqazo-BaseCometColor"
            style="display: inline-block;"
          >
            #A1CFF7
          </div>
        </td>
        <td
          class="css-52t4kn-BaseCometColor"
        >
          <div
            class="css-vls3u9-BaseCometColor"
          >
            <div
              class="css-1ufkypn-BaseCometColor"
            >
              AAA
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="css-30c2jo-BaseCometColor"
      >
        <td
          class="css-7a56uj-BaseCometColor"
        >
          <div
            class="css-15s1hcw-BaseCometColor"
          >
            90
          </div>
        </td>
        <td>
          $comet-color-midnight-90
        </td>
        <td
          class="css-qe1bk5-BaseCometColor"
        >
          <div
            class="css-18qqazo-BaseCometColor"
            style="display: inline-block;"
          >
            #D0E7FB
          </div>
        </td>
        <td
          class="css-52t4kn-BaseCometColor"
        >
          <div
            class="css-vls3u9-BaseCometColor"
          >
            <div
              class="css-1ufkypn-BaseCometColor"
            >
              AAA
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
